--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="app.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Dino</title>
 </head>
 <body>
-    
+    <div id="score-board">
+        <p><strong>Score : </strong><span id="score">00</span></p>
+        <p><strong>HI-Score : </strong><span id="hi-score">00</span></p>
+    </div>
+    <div id="gameboard">
+        <img src="images/run.gif" id="trex"alt="dino">
+        <img src="images/transparent-Img.png" id="temp"/>
+    </div>
 </body>
 <script src="game.js"></script>
 </html>
